[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Firemaker.gd" type="Script" id=1]
[ext_resource path="res://sounds/flames_start.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/flames_spread.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/flames_end.wav" type="AudioStream" id=4]

[node name="Firemaker" type="Node"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer_FlamesStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioStreamPlayer_FlamesSpread" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer_FlamesEnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FlameTimer" type="Timer" parent="."]
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="FlameTimer" to="." method="spread_flames"]
[connection signal="timeout" from="EndTimer" to="." method="finished"]
